--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "less-loader": "^11.1.3",
     "mongodb": "^5.7.0",
     "next": "13.4.9",
+    "next-auth": "^4.22.3",
+    "openai": "^3.3.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
