--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.4.9",
     "next-auth": "^4.22.3",
     "openai": "^3.3.0",
+    "p-queue": "^7.3.4",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
